Fix card image width on smaller displays

--- a/app/themes/simple/assets/stylesheets/modules.scss
+++ b/app/themes/simple/assets/stylesheets/modules.scss
@@ -106,6 +106,10 @@
     column-gap: 3rem;
 }
 
+.card-img-top img {
+    width: 100%;
+}
+
 .card-post {
     -webkit-column-break-inside: avoid;
     page-break-inside: avoid;
